tests/baselines/reference/iteratorSpreadInCall8.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInCall8.ts(31,12): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/conformance/es6/spread/iteratorSpreadInCall8.ts(31,35): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/spread/iteratorSpreadInCall8.ts (2 errors) ====
    class Foo<T> {
        constructor(...s: T[]) { }
    }
    
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    class StringIterator {
        next() {
            return {
                value: "",
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    new Foo(...new SymbolIterator, ...new StringIterator);
               ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
                                      ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.